--- a/_posts/2019-12-24-testpost.md
+++ b/_posts/2019-12-24-testpost.md
@@ -1,8 +1,7 @@
 ---
 title: "This is the test post."
 date: 2019-12-24
-tags: [Algorithm]
-excerpt: "Algorithm"
+tags: [Test]
 ---
 
 # H1 Heading
@@ -13,9 +12,9 @@ excerpt: "Algorithm"
 
 Here's some basic text.
 
-And here's some *粗体*
+And here's some *斜体*
 
-Here's some **斜体** text.
+Here's some **粗体** text.
 
 What about [link](https://github.com)
 
@@ -30,7 +29,7 @@ Here's a number list:
 3. Third
 
 Python code block:
-```Python
+```python
 import numpy as np
 
 def test_function(x, y):
